# Pnlclaw-community

./: .env.example  .gitignore  .pre-commit-config.yaml  .pro-only  CLAUDE.md  LEGAL.md  Makefile  README.md  README.zh-CN.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  deploy.yml  refresh-star-history.yml  release-desktop.yml
apps/admin/: middleware.ts  package-lock.json  package.json
apps/admin/app/: layout.tsx  page.tsx
apps/admin/app/dashboard/: layout.tsx  page.tsx
apps/admin/app/dashboard/analytics/: page.tsx
apps/admin/app/dashboard/invitations/: page.tsx
apps/admin/app/dashboard/settings/: page.tsx
apps/admin/app/dashboard/tags/: page.tsx
apps/admin/app/dashboard/users/: page.tsx
apps/admin/app/login/: page.tsx
apps/admin/components/analytics/: ActiveUsersChart.tsx  DeviceBreakdown.tsx  GeoDistributionMap.tsx  MetricCard.tsx  RetentionChart.tsx  TrafficChart.tsx
apps/admin/components/auth/: AuthProvider.tsx  LoginButton.tsx  TOTPVerifyDialog.tsx
apps/admin/components/invitations/: CreateInviteDialog.tsx  InvitationTable.tsx
apps/admin/components/layout/: AdminHeader.tsx  AdminSidebar.tsx
apps/admin/components/tags/: TagManager.tsx
apps/admin/components/ui/: badge.tsx  button.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  table.tsx  toast.tsx
apps/admin/components/users/: AdminNotesList.tsx  BulkActionBar.tsx  LoginHistoryTable.tsx  UserActionButtons.tsx  UserDetailCard.tsx  UserExportButton.tsx  UserTable.tsx  UserTagBadges.tsx
apps/admin/lib/: api.ts  auth.ts  types.ts
apps/admin/lib/hooks/: useAnalytics.ts  useAuth.ts  useInvitations.ts  useTags.ts  useUsers.ts
apps/desktop/: lint_errors.json  middleware.ts  next.config.ts  package-lock.json  package.json  ts_error.txt  tsc_out.txt  tsc_report.txt
apps/desktop/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
apps/desktop/app/(dashboard)/: layout.tsx
apps/desktop/app/(dashboard)/backtests/: page.tsx
apps/desktop/app/(dashboard)/dashboard/: page.tsx
apps/desktop/app/(dashboard)/markets/: page.tsx
apps/desktop/app/(dashboard)/mcp/: page.tsx
apps/desktop/app/(dashboard)/paper/: page.tsx
apps/desktop/app/(dashboard)/polymarket/: page.tsx
apps/desktop/app/demo/: page.tsx
apps/desktop/app/login/: page.tsx
apps/desktop/components/: agent-chat.tsx  realtime-debug-panel.tsx  sidebar.tsx
apps/desktop/components/__tests__/: agent-chat-reasoning.test.tsx
apps/desktop/components/auth/: AuthProvider.tsx  require-auth.tsx  user-menu.tsx
apps/desktop/components/i18n/: i18n-provider.tsx  locale-switcher.tsx  use-i18n.ts
apps/desktop/components/landing/: sections.tsx
apps/desktop/components/providers/: backend-ready-provider.tsx  dashboard-realtime-provider.tsx
apps/desktop/components/strategy/: ai-sidebar.tsx  backtest-result-panel.tsx  param-panel.tsx  runner-monitor.tsx  shared-charts.tsx  strategy-card.tsx  strategy-filters.tsx  strategy-table.tsx  studio-toolbar.tsx  version-timeline.tsx  yaml-editor.tsx
apps/desktop/components/tactical/: funding-rate-panel.tsx  large-trade-feed.tsx  liquidation-panel.tsx
apps/desktop/components/trading/: balance-card.tsx  candlestick-chart.tsx  mode-toggle.tsx  order-form.tsx  order-table.tsx  orderbook-panel.tsx  pnl-curve-panel.tsx  position-panel.tsx  ticker-panel.tsx  trade-history.tsx
apps/desktop/components/ui/: badge.tsx  button.tsx  demo.tsx  dialog.tsx  input.tsx  label.tsx  scroll-area.tsx  select.tsx  splite.tsx  switch.tsx  table.tsx  tabs.tsx
apps/desktop/lib/: api-client.ts  auth.ts  crypto.ts  kline-cache.ts  markdown-rich.tsx  perf.ts  use-market-ws.ts  use-paper-ws.ts  use-polymarket-ws.ts  use-runner-ws.ts  use-trading-ws.ts
apps/desktop/lib/hooks/: use-api.ts  use-klines.ts
apps/desktop/lib/i18n/: index.ts  types.ts
apps/desktop/lib/i18n/messages/: en.ts  (+1 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
extensions/ollama/: README.md  manifest.json  plugin.py  provider.py  pyproject.toml
extensions/openai/: manifest.json  plugin.py  provider.py  pyproject.toml
scripts/: acceptance_check.py  acceptance_live.py  build-desktop.ps1  commit_msg.txt  debug_equity.py  generate_demo_data.py  sync-community.sh  test_api_equity.py  test_exchange_connectivity.py
scripts/pyinstaller/: pnlclaw-server.spec  pnlclaw_server_entry.py
services/admin-api/: pyproject.toml
services/admin-api/app/: main.py
services/admin-api/app/api/v1/: admin_2fa.py  analytics.py  auth.py  health.py  invitations.py  tags.py  users.py
services/admin-api/app/core/: config.py  dependencies.py
services/admin-api/app/middleware/: activity.py  audit.py  auth.py  rate_limit.py
services/admin-api/app/tasks/: cleanup.py
services/local-api/: pyproject.toml
services/local-api/app/: main.py
services/local-api/app/api/v1/: agent.py  backtests.py  chat_sessions.py  derivatives.py  health.py  markets.py  mcp.py  paper.py  polymarket.py  settings.py  skills_api.py  strategies.py  trading.py  ws.py
services/local-api/app/core/: audit.py  crypto.py  dependencies.py  redis.py  redis_pubsub.py  settings_service.py  strategy_runner.py
services/local-api/app/middleware/: error_handler.py  rate_limit.py  request_id.py
services/local-api/tests/: conftest.py  test_agent_streaming_protocol.py  test_api_agent.py  test_api_backtests.py  test_api_health.py  test_api_markets.py  test_api_paper.py  test_api_settings.py  test_api_strategies.py  test_middleware_error_handler.py  test_middleware_request_id.py  test_production_closed_loop.py  test_ws.py
skills/backtest-explain/: SKILL.md
skills/exchange-setup/: SKILL.md
skills/indicator-guide/: SKILL.md
skills/market-analysis/: SKILL.md
skills/pnl-explain/: SKILL.md
skills/risk-report/: SKILL.md
skills/strategy-coder/: SKILL.md
skills/strategy-draft/: SKILL.md
tests/: conftest.py
tests/integration/: conftest.py  test_full_pipeline.py  test_market_data_flow.py  test_paper_trading_flow.py
(+15 files in other folders)
