[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pnlclaw-community"
version = "0.1.0"
description = "PnLClaw Community: local-first crypto quant research and paper trading platform."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
authors = [
  { name = "PnLClaw" }
]
keywords = ["crypto", "quant", "trading", "backtest", "paper-trading", "websocket", "prediction-market"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development",
  "Topic :: Office/Business :: Financial",
  "Typing :: Typed"
]
dependencies = [
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "websockets>=13.0",
  "orjson>=3.10.0",
  "structlog>=24.4.0",
  "python-dotenv>=1.0.1",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "pre-commit>=3.7.0",
]

[tool.hatch.build.targets.wheel]
packages = []

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --tb=short"
testpaths = [
  "tests",
  "packages",
  "services",
]
pythonpath = [
  ".",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["pnlclaw_types", "pnlclaw_core", "pnlclaw_security", "pnlclaw_exchange", "pnlclaw_market", "pnlclaw_strategy", "pnlclaw_backtest", "pnlclaw_paper", "pnlclaw_risk", "pnlclaw_agent", "pnlclaw_llm", "pnlclaw_storage"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
