[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pnlclaw-admin-api"
version = "0.1.0"
description = "Pro admin API service for user management"
license = "LicenseRef-Proprietary"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pnlclaw-types",
    "pnlclaw-core",
    "pnlclaw-security",
    "pnlclaw-pro-storage",
    "pnlclaw-pro-auth",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "httpx>=0.27.0"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
