[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pnlclaw-local-api"
version = "0.1.0"
description = "PnLClaw local FastAPI entrypoint and API composition layer"
readme = {text = "PnLClaw local API service.", content-type = "text/plain"}
license = "AGPL-3.0-only"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "cryptography>=43.0",
    "redis[hiredis]>=5.0.0",
    "pnlclaw-types",
    "pnlclaw-core",
    "pnlclaw-exchange",
    "pnlclaw-market",
    "pnlclaw-security",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
